// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match > useActive > 2 matches loose 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <p>
        / is active
      </p>
      <p>
        /abc is active
      </p>
      <p>
        /xyz is not active
      </p>
    </div>
  </div>
</div>
`;

exports[`match > useActive > 2 matches strict 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <p>
        / is not active
      </p>
      <p>
        /abc is active
      </p>
      <p>
        /xyz is not active
      </p>
    </div>
  </div>
</div>
`;
